--- a/src/components/common/Form/SubmitButtonComponent/SubmitButton/SubmitButton.module.scss
+++ b/src/components/common/Form/SubmitButtonComponent/SubmitButton/SubmitButton.module.scss
@@ -11,7 +11,9 @@
 .pointer {
   cursor: not-allowed !important;
 }
-
+.btnLightGreen {
+  background-color: #49b9a6;
+}
 @media only screen and (max-width: 600px) {
   .holder {
     display: flex;
